--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
         <div class="container">
             <!-- Hemen logoa txertatu behar da -->
-            <a href="#" class="LOGO">Logoa</a> 
+            <img class="logo" src="Media/Logo.png" alt="Wiki Server">
             <!-- Nabigatzailea, bakoitzak beraren orria kargatuko du -->
             <nav class="navigation">
                 <ul>
@@ -31,7 +31,7 @@
 
 
     <!-- Orriaren behekaldea - ESTATIKOA: Footer -->
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="footer-content">
             <div class="footer-section about">aaaaaa</div>
             <div class="footer-section links"></div>
@@ -40,7 +40,7 @@
         <div class="footer-bottom">
             <p>Talde 1 &copy; 2020</p>
         </div>
-    </footer>
+    </footer> -->
     
 </body>
 </html>
