--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Server Wiki</title>
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/IndexCSS.css">
     <link href='https://fonts.googleapis.com/css?family=Secular One' rel='stylesheet'>
 </head>
 <body>
@@ -14,15 +14,17 @@
             <!-- Hemen logoa txertatu behar da -->
             <img class="logo" src="Media/Logo.png" alt="Wiki Server">
             <!-- Nabigatzailea, bakoitzak beraren orria kargatuko du -->
-            <nav class="navigation">
-                <ul>
-                    <li><a href="#">HASIERA</a></li>
-                    <li><a href="#">EGUNERATUAK</a></li>
-                    <li><a href="#">BISITATUENAK</a></li>
-                    <li><a href="#">BERRIAK</a></li>
-                    <li><a href="#">FAQ</a></li>
-                </ul>
-            </nav>
+            <div class="fondoNavigation">
+                <nav class="navigation">
+                    <ul>
+                        <li><a href="#">HASIERA</a></li>
+                        <li><a href="#">EGUNERATUAK</a></li>
+                        <li><a href="#">BISITATUENAK</a></li>
+                        <li><a href="#">BERRIAK</a></li>
+                        <li><a href="#">FAQ</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </header>
 
