Logo Grande y refachero

--- a/NavLateral.html
+++ b/NavLateral.html
@@ -5,10 +5,11 @@
   <title>Side Navbar</title>
   <link href='https://fonts.googleapis.com/css?family=Secular One'>
 <style>
+  
 .sidenav {
   height: 100%;
   width: 160px;
-  font-family: "Secular One";
+  font-family: 'Secular One';
   position: fixed;
   z-index: 1;
   top: 0;
