--- a/index.html
+++ b/index.html
@@ -16,15 +16,13 @@
             <img class="logo" src="Media/Logo.png" alt="Wiki Server">
             <!-- Nabigatzailea, bakoitzak beraren orria kargatuko du -->
             <div class="fondoNavigation">
-                <nav class="navigation">
-                    <ul>
-                        <li><a href="#">HASIERA</a></li>
-                        <li><a href="#">EGUNERATUAK</a></li>
-                        <li><a href="#">BISITATUENAK</a></li>
-                        <li><a href="#">BERRIAK</a></li>
-                        <li><a href="#">FAQ</a></li>
-                    </ul>
-                </nav>
+                    <div class="navbar">
+                        <a class="active" href="#">HASIERA</a> 
+                        <a href="#">EGUNERATUAK</a> 
+                        <a href="#">BISITATUENAK</a> 
+                        <a href="#">BERRIAK</a>
+                        <a href="#">FAQ</a>
+                    </div>
             </div>
         </div>
     </header>
