--- a/index copy.html
+++ b/index copy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Wiki Server</title>
-    <link rel="stylesheet" href="CSS/IndexCSS.css">
+    <link rel="stylesheet" href="CSS/IndexCSS copy.css">
     <link href='https://fonts.googleapis.com/css?family=Secular One' rel='stylesheet'>
     <link rel="icon" type="image/png" href="Media/fav-icon.png">
 </head>
@@ -26,18 +26,6 @@
             </div>
         </div>
     </header>
-
-    <!-- Orriaren mamia -->
-    <section>
-        <div class="slider">
-            <img src="/Media/Slider1.PNG">
-        </div>
-        <div class="articulos">
-            <div class="articulo1"></div>
-            <div class="articulo2"></div>
-        </div>
-    </section>
-        <!--  -->
 
     <!-- Web orriaren kontenidoa kargatuko da hemen   -->
     <main class="main"></main>
