--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="Media/fav-icon.png">
 </head>
 <body>
-
+<div class="content">
     <!-- Orriaren goikaldea - ESTATIKOA: Logoa eta nabigatzailea -->
     <header class="header">
         <div class="container">
@@ -90,27 +90,13 @@
             </div>
         </div>
     </section>
-
-    <!-- Orriaren behekaldea - ESTATIKOA: Footer -->
-    <!-- <footer class="footer">
-        <div class="footer-content">
-            <div class="footer-section about">aaaaaa</div>
-            <div class="footer-section links"></div>
-            <div class="footer-section kontaktua"></div>
-        </div>
-        <div class="footer-bottom">
-            <p>Talde 1 &copy; 2020</p>
-        </div>
-    </footer>   -->
+</div>
     <footer>
         <div class="footerP1">
-
                 <img  src="/Media/Footer/instagra.png">
                 <a>@ServerWiki</a>
-           
                 <img  src="/Media/Footer/twitter-logo-6.png">
-                <a>@ServerWiki</a>
-          
+                <a>@ServerWiki</a> 
                 <img src="/Media/Footer/gmail.png">
                 <a>ServerWiki@gmail.com</a>
         </div>
