--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                     <a href="#">EGUNERATUAK</a> 
                     <a href="#">BISITATUENAK</a> 
                     <a href="#">BERRIAK</a>
+                    <a href="Artikuluak.html">ARTIKULUAK</a>
                     <a href="#">FAQ</a>
                 </div>
             </div>
