--- a/index copy.html
+++ b/index copy.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="Media/fav-icon.png">
 </head>
 <body>
-
+    <div class="content">
     <!-- Orriaren goikaldea - ESTATIKOA: Logoa eta nabigatzailea -->
     <header class="header">
         <div class="container">
@@ -29,19 +29,7 @@
 
     <!-- Web orriaren kontenidoa kargatuko da hemen   -->
     <main class="main"></main>
-
-
-    <!-- Orriaren behekaldea - ESTATIKOA: Footer -->
-    <!-- <footer class="footer">
-        <div class="footer-content">
-            <div class="footer-section about">aaaaaa</div>
-            <div class="footer-section links"></div>
-            <div class="footer-section kontaktua"></div>
-        </div>
-        <div class="footer-bottom">
-            <p>Talde 1 &copy; 2020</p>
-        </div>
-    </footer>  -->
+</div>
     <footer>
         <div class="footerP1">
 
