Footer super Responsable y botones de articulos

--- a/Artikuluak.html
+++ b/Artikuluak.html
@@ -21,21 +21,21 @@
                     <a href="#">EGUNERATUAK</a> 
                     <a href="#">BISITATUENAK</a> 
                     <a href="#">BERRIAK</a>
-                    <a class="active" href="#">ARTIKULUAK</a>
-                    <a href="Galderak.html">FAQ</a>
+                    <a href="Artikuluak.html">ARTIKULUAK</a>
+                    <a class="active" href="Galderak.html">FAQ</a>
                 </div>
-            </div>
+        </div>
         </div>
     </header>
-<section>
-    <!-- Orriaren SideNav-a -->
-        <!-- "&nbsp" Tabulazioa ematen du -->
-    <div class="sidenav">
-        <a href="#about">INDIZEA:</a>
-        <a href="#about">&nbsp &nbsp Proxmox</a>
-        <a href="#services">&nbsp &nbsp Free Nas</a>
-        <a href="#clients">&nbsp &nbsp Instalazioak</a>
-        <a href="#contact">&nbsp &nbsp Arazoak</a>
+<div>
+    <div class="center">
+        <div class="pagination">
+            <a href="#">«</a>
+            <a href="#" class="active">Proxmox</a>
+            <a href="#">Free Nas</a>
+            <a href="#">Instalazioak</a>
+            <a href="#">»</a>
+        </div>
     </div>
     <!-- Artikuluak -->
     <div class="articulos">
@@ -52,7 +52,7 @@
         </div>
     </div>
 </div>
-</section>
+</div>
     <footer>
         <div class="footerP1">
                 <img  src="/Media/Footer/instagra.png">
