--- a/Artikuluak.html
+++ b/Artikuluak.html
@@ -36,6 +36,15 @@
             <a href="#">Instalazioak</a>
             <a href="#">»</a>
         </div>
+<section class="row">
+    <!-- Orriaren SideNav-a -->
+        <!-- "&nbsp" Tabulazioa ematen du -->
+    <div class="sidenav">
+        <a href="#about">INDIZEA:</a>
+        <a href="#about">&nbsp &nbsp Proxmox</a>
+        <a href="#services">&nbsp &nbsp Free Nas</a>
+        <a href="#clients">&nbsp &nbsp Instalazioak</a>
+        <a href="#contact">&nbsp &nbsp Arazoak</a>
     </div>
     <!-- Artikuluak -->
     <div class="articulos">
