Galderen atala amaituta guztia, responsive dena

--- a/Galderak.html
+++ b/Galderak.html
@@ -32,7 +32,7 @@
         </header>
 
         <!-- Web orriaren mamia kargatuko da hemen   -->
-        <section> 
+        <div class='section'> 
                 <div class="main">
                     <!-- Galdera -->
                     <article class="galdera">
@@ -54,11 +54,11 @@
             
                 </div>
                 <div class="botoiak">
-                        <a href="/Galderak2.html"><img src="/Media/FlechaIzquierda.png"  class="botonAnterior" name="botonAnterior" ></a>
+                        <a href="/Galderak3.html"><img src="/Media/FlechaIzquierda.png"  class="botonAnterior" name="botonAnterior" ></a>
                         <a href="/Galderak2.html"><img src="/Media/FlechaDerecha.png" class="botonSiguiente" name="botonSiguiente" ></a>
 
                     </div>
-        </section>
+                </div>
     </div>
     <footer>
         <div class="footerP1">
