--- a/Galderak2.html
+++ b/Galderak2.html
@@ -32,7 +32,7 @@
         </header>
 
         <!-- Web orriaren mamia kargatuko da hemen   -->
-        <section> 
+        <div class='section'> 
                 <div class="main">
                     <!-- Galdera -->
                     <article class="galdera">
@@ -60,7 +60,7 @@
                         <a href="/Galderak3.html"><img src="/Media/FlechaDerecha.png" class="botonSiguiente" name="botonSiguiente" ></a>
 
                     </div>
-        </section>
+                </div>
     </div>
     <footer>
         <div class="footerP1">
