Free Nas Artikuluak

--- a/FreeNas1.html
+++ b/FreeNas1.html
@@ -39,9 +39,11 @@
             </div>
             <div class="center2">
             <div class="pagination">
-                <a href="#">DOKUMENTUAREN AZALPENA</a>
-                <a href="#" class="active">HARDWARE BALDINTZAK</a>
-                <a href="#">INSTALAZIOA</a>
+                <a href="FreeNas1.html" class="active">DOKUMENTUAREN AZALPENA</a>
+                <a href="FreeNas2.html">HARDWARE BALDINTZAK</a>
+                <a href="FreeNas3.html">INSTALAZIOA</a>
+                <a href="FreeNas4.html">INST. PROXMOX</a>
+
             </div>
             </div>
             <!-- Artikuluak -->
@@ -52,11 +54,6 @@
                         <p>Dokumentu honetan FreeNAS zergatik erabiliko dugun eta hau erabiltzeko lehen pausuak azalduko dira, 
                             hala nola, hardware baldintzak, non deskargatu, nola instalatu, lehen pausoen tutoriala, enkriptazioa 
                             eta backUp zerbitzuak beste atal askoren artean.</p>
-                        <h3>HARDWARE BALDINTZAK</h3>
-                        <p>FreeNAS doako eta open source’-ko Network Attached Storage (NAS) software bat da FreeBSD-an 
-                            (x86, Intel 80386 eta Intel 80486-ko arkitekturatan oinarruta dagoen ‘open source’-ko sistema eragile bat da). 
-                            FreeNAS-ak 64-bit x86-ko ia edozein PC edo makina birtualean hasieratuko da baina, hardware zuzen bat aukeratzea 
-                            oso garrantzitsua da FreeNAS-ak egiten duen bete behar garrantzitsuena egiten uzteko: zure informazioa babestu.</p>
                 </div>
             </div>
         </div>
