--- a/Galderak2.html
+++ b/Galderak2.html
@@ -24,7 +24,7 @@
                             <a href="#">EGUNERATUAK</a> 
                             <a href="#">BISITATUENAK</a> 
                             <a href="#">BERRIAK</a>
-                            <a href="Artikuluak.html">ARTIKULUAK</a>
+                            <a href="FreeNas.html">ARTIKULUAK</a>
                             <a class="active" href="Galderak.html">FAQ</a>
                         </div>
                 </div>
@@ -32,7 +32,7 @@
         </header>
 
         <!-- Web orriaren mamia kargatuko da hemen   -->
-        <section> 
+        <div class='section'> 
                 <div class="main">
                     <!-- Galdera -->
                     <article class="galdera">
@@ -54,7 +54,7 @@
                         <a href="/Galderak.html"><img src="/Media/FlechaIzquierda.png"  class="botonAnterior" name="botonAnterior" ></a>
                         <a href="/Galderak3.html"><img src="/Media/FlechaDerecha.png" class="botonSiguiente" name="botonSiguiente" ></a>
                     </div>
-        </section>
+                </div>
     </div>
     <footer>
         <div class="footerP1">
