--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 <div class="navbar">
                     <a class="active" href="#">HASIERA</a> 
                     <a href="#">EGUNERATUAK</a> 
-                    <a href="#">BISITATUENAK</a> 
+                    <a href="Bistaratuenak.html">BISITATUENAK</a> 
                     <a href="#">BERRIAK</a>
-                    <a href="Artikuluak.html">ARTIKULUAK</a>
+                    <a href="FreeNas.html">ARTIKULUAK</a>
                     <a href="Galderak.html">FAQ</a>
                 </div>
             </div>
