comentarios en css bistaratuenak

--- a/Bistaratuenak.html
+++ b/Bistaratuenak.html
@@ -35,7 +35,7 @@
         <div class="card card1">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
-            <h5 class="card-title">Horrialde bistaratuena 1</h5>
+            <h5 class="card-title">Orrialde bistaratuena 1</h5>
             <p class="card-text">Textito to brutal para explicar un poco esto.</p>
             <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
@@ -43,7 +43,7 @@
         <div class="card card2">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
-            <h5 class="card-title">Horrialde bistaratuena 2</h5>
+            <h5 class="card-title">Orrialde bistaratuena 2</h5>
             <p class="card-text">Textito to brutal para explicar un poco esto</p>
             <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
@@ -51,7 +51,7 @@
         <div class="card card3">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
-            <h5 class="card-title">Horrialde bistaratuena 3</h5>
+            <h5 class="card-title">Orrialde bistaratuena 3</h5>
             <p class="card-text">Textito to brutal para explicar un poco esto</p>
             <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
