--- a/Galderak.html
+++ b/Galderak.html
@@ -24,7 +24,7 @@
                             <a href="#">EGUNERATUAK</a> 
                             <a href="#">BISITATUENAK</a> 
                             <a href="#">BERRIAK</a>
-                            <a href="FreeNas.html">ARTIKULUAK</a>
+                            <a href="FreeNas1.html">ARTIKULUAK</a>
                             <a class="active" href="Galderak.html">FAQ</a>
                         </div>
                 </div>
