--- a/FreeNas1.html
+++ b/FreeNas1.html
@@ -21,7 +21,7 @@
                             <a href="#">EGUNERATUAK</a> 
                             <a href="#">BISITATUENAK</a> 
                             <a href="#">BERRIAK</a>
-                            <a class="active" href="FreeNas.html">ARTIKULUAK</a>
+                            <a class="active" href="FreeNas1.html">ARTIKULUAK</a>
                             <a href="Galderak.html">FAQ</a>
                         </div>
                 </div>
