--- a/FreeNas3.html
+++ b/FreeNas3.html
@@ -31,15 +31,14 @@
             <div class="center">
                 <div class="pagination">
                     <a href="#">«</a>
-                    <a href="#" class="active">Free Nas</a>
-                    <a href="#">Proxmox</a>
+                    <a href="FreeNas2.html" class="active">Free Nas</a>
+                    <a href="Debian.html">Debian</a>
                     <a href="#">Instalazioak</a>
-                    <a href="#">»</a>
+                    <a href="Debian.html">»</a>
                 </div>
             </div>
             <div class="center2">
             <div class="pagination">
-                <a href="FreeNas1.html">DOKUMENTUAREN AZALPENA</a>
                 <a href="FreeNas2.html">HARDWARE BALDINTZAK</a>
                 <a href="FreeNas3.html" class="active">INSTALAZIOA</a>
                 <a href="FreeNas4.html">INST. PROXMOX</a>
