--- a/Debian.html
+++ b/Debian.html
@@ -27,34 +27,32 @@
                 </div>
                 </div>
             </header>
-        <div>
             <div class="center">
                 <div class="pagination">
-                    <a href="#">«</a>
-                    <a href="#" class="active">Free Nas</a>
-                    <a href="#">Proxmox</a>
+                    <a href="FreeNas2.html">«</a>
+                    <a href="FreeNas2.html">Free Nas</a>
+                    <a href="Debian.html" class="active">Debian</a>
                     <a href="#">Instalazioak</a>
                     <a href="#">»</a>
                 </div>
             </div>
-            <div class="center2">
-            <div class="pagination">
-                <a href="FreeNas1.html" class="active">DOKUMENTUAREN AZALPENA</a>
-                <a href="FreeNas2.html">HARDWARE BALDINTZAK</a>
-                <a href="FreeNas3.html">INSTALAZIOA</a>
-                <a href="FreeNas4.html">INST. PROXMOX</a>
-
-            </div>
-            </div>
             <!-- Artikuluak -->
             <div class="articulos">
                 <div class="articulo1">
-                    <h1>Free Nas</h1>
-                        <h3>DOKUMENTUAREN AZALPENA</h3>
-                        <p>Dokumentu honetan FreeNAS zergatik erabiliko dugun eta hau erabiltzeko lehen pausuak azalduko dira, 
-                            hala nola, hardware baldintzak, non deskargatu, nola instalatu, lehen pausoen tutoriala, enkriptazioa 
-                            eta backUp zerbitzuak beste atal askoren artean.</p>
-                </div>
+                    <h1>DEBIAN</h1>
+                        <h3>ZER DA, DEBIAN GNU/LINUX?</h3>
+                        <p>GNU / Linuxen distribuzioetako sistema eragile bat da, ezagunenetarikoa, egonkorrenetakoa eta zaharrenetarikoa,
+                            gainera, software libre batean dago oinarrituta. Ubuntu bezalako distribuzio ezagunak sistema eragile honetan 
+                            oinarritu zen etaedozein lekutan erabili daiteke, bai ordenagailuan, etxean zerbitzari batean, bulegoan,  
+                            eta fabrikatzailean baita ere.</p>
+                        <h3>NOLA FUNTZIONATZEN DU?</h3>
+                        <img src="Media/Fotis/talde3 - Proxmox Virtual Environment - Google Chrome 20_10_2020 12_39_22.png" width="60%">
+                        <img src="Media/Fotis/talde3 - Proxmox Virtual Environment - Google Chrome 20_10_2020 12_57_34.png" width="60%">
+                        <h3>NOLA DESKARGATU DEZAKET?</h3>
+                        <p>Prestatzen ari garen zerbitzaria proxmoxen bidez desplegatuko dugunez, Debianen oinarritutako VM bat sortzeko pausuak azalduko dizuegu:</p>
+                            <p>&nbsp&nbsp• &nbsp Informazio gehiagorako Debianen dokumentazioa irakurtzea gomendatzen dizuegu:</p>
+                                <p><a href="https://www.debian.com/doc/">https://www.debian.com/doc/</a></p>
+                    </div>
             </div>
         </div>
         </div>
