--- a/DNS.html
+++ b/DNS.html
@@ -29,29 +29,28 @@
             </header>
             <div class="center">
                 <div class="pagination">
-                    <a href="FreeNas2.html">«</a>
+                    <a href="Debian.html">«</a>
                     <a href="FreeNas2.html">Free Nas</a>
-                    <a href="Debian.html" class="active">Debian</a>
-                    <a href="DNS.html">DNS</a>
-                    <a href="DNS.html">»</a>
+                    <a href="Debian.html">Debian</a>
+                    <a href="DNS.html" class="active">DNS</a>
+                    <a href="#">»</a>
                 </div>
             </div>
             <!-- Artikuluak -->
             <div class="articulos">
                 <div class="articulo1">
                     <h1>DEBIAN</h1>
-                        <h3>ZER DA, DEBIAN GNU/LINUX?</h3>
-                        <p>GNU / Linuxen distribuzioetako sistema eragile bat da, ezagunenetarikoa, egonkorrenetakoa eta zaharrenetarikoa,
-                            gainera, software libre batean dago oinarrituta. Ubuntu bezalako distribuzio ezagunak sistema eragile honetan 
-                            oinarritu zen etaedozein lekutan erabili daiteke, bai ordenagailuan, etxean zerbitzari batean, bulegoan,  
-                            eta fabrikatzailean baita ere.</p>
+                        <h3>ZER DA, DNS-A?</h3>
+                        <p>DNS-a Domain Name System esan nahi du, domeinuari dagokion zerbitzarian idazteaz gain, benetako helbidea, 
+                            IP izeneko zenbakizko erlazioa, domeinuaren izenean itzultzeko balioko digu, hau da: IP XXX.XXX.XXX.X 
+                            izan beharrean <a href="#">www.serverwiki.com</a> erakutsiko digu.</p>
                         <h3>NOLA FUNTZIONATZEN DU?</h3>
-                        <img src="Media/Fotis/talde3 - Proxmox Virtual Environment - Google Chrome 20_10_2020 12_39_22.png" width="60%">
-                        <img src="Media/Fotis/talde3 - Proxmox Virtual Environment - Google Chrome 20_10_2020 12_57_34.png" width="60%">
-                        <h3>NOLA DESKARGATU DEZAKET?</h3>
-                        <p>Prestatzen ari garen zerbitzaria proxmoxen bidez desplegatuko dugunez, Debianen oinarritutako VM bat sortzeko pausuak azalduko dizuegu:</p>
-                            <p>&nbsp&nbsp• &nbsp Informazio gehiagorako Debianen dokumentazioa irakurtzea gomendatzen dizuegu:</p>
-                                <p><a href="https://www.debian.com/doc/">https://www.debian.com/doc/</a></p>
+                        <p>Erabiltzaileak domeinua idazterakoan (<a href="#">www.server-wiki.com</a>) eta enter botoia 
+                            sakatzerakoan nabigatzaileak DNS zerbitzariarekin gure domeinuaren IP helbidea zein den begiratuko du eta,
+                            topatzerakoan, nabigatzaileak IP XXX.XXX.XXX.X itzuliko du, honekin erabiltzeileak gure 
+                            webgunea ikusi ahalko du.</p>    
+                        <h3>NOLA ALDATU DNS-A</h3>
+                        <p>Erabiltzaileak Proxmoxa konfiguratzen duen lehen aldian DNS-aren izena gordeko du, aldatu nahi izatekotan, kanpoko programa bat erabiliko dugu: BIND9.</p>
                     </div>
             </div>
         </div>
