--- a/FreeNas3.html
+++ b/FreeNas3.html
@@ -33,7 +33,7 @@
                     <a href="#">«</a>
                     <a href="FreeNas2.html" class="active">Free Nas</a>
                     <a href="Debian.html">Debian</a>
-                    <a href="#">Instalazioak</a>
+                    <a href="DNS.html">DNS</a>
                     <a href="Debian.html">»</a>
                 </div>
             </div>
