SSH / FTP (faltan capturas)

--- a/Debian.html
+++ b/Debian.html
@@ -33,6 +33,8 @@
                     <a href="FreeNas2.html">Free Nas</a>
                     <a href="Debian.html" class="active">Debian</a>
                     <a href="DNS.html">DNS</a>
+                    <a href="SSH.html">SSH</a>
+                    <a href="FTP.html">FTP</a>
                     <a href="DNS.html">»</a>
                 </div>
             </div>
@@ -40,7 +42,7 @@
             <div class="articulos">
                 <div class="articulo1">
                     <h1>DEBIAN</h1>
-                        <h3>ZER DA, DEBIAN GNU/LINUX?</h3>
+                    <h3>ZER DA, DEBIAN GNU/LINUX?</h3>
                         <p>GNU / Linuxen distribuzioetako sistema eragile bat da, ezagunenetarikoa, egonkorrenetakoa eta zaharrenetarikoa,
                             gainera, software libre batean dago oinarrituta. Ubuntu bezalako distribuzio ezagunak sistema eragile honetan 
                             oinarritu zen etaedozein lekutan erabili daiteke, bai ordenagailuan, etxean zerbitzari batean, bulegoan,  
