--- a/FTP.html
+++ b/FTP.html
@@ -29,30 +29,28 @@
             </header>
             <div class="center">
                 <div class="pagination">
-                    <a href="FreeNas2.html">«</a>
+                    <a href="DNS.html">«</a>
                     <a href="FreeNas2.html">Free Nas</a>
                     <a href="Debian.html">Debian</a>
-                    <a href="DNS.html" class="active">DNS</a>
+                    <a href="DNS.html">DNS</a>
                     <a href="SSH.html">SSH</a>
-                    <a href="FTP.html">FTP</a>
-                    <a href="SSH.html">»</a>
+                    <a href="FTP.html" class="active">FTP</a>
+                    <a href="FreeNas2.html">»</a>
                 </div>
             </div>
             <!-- Artikuluak -->
             <div class="articulos">
                 <div class="articulo1">
-                    <h1>DNS</h1>
-                        <h3>ZER DA, DNS-A?</h3>
-                        <p>DNS-a Domain Name System esan nahi du, domeinuari dagokion zerbitzarian idazteaz gain, benetako helbidea, 
-                            IP izeneko zenbakizko erlazioa, domeinuaren izenean itzultzeko balioko digu, hau da: IP XXX.XXX.XXX.X 
-                            izan beharrean <a href="#">www.serverwiki.com</a> erakutsiko digu.</p>
-                        <h3>NOLA FUNTZIONATZEN DU?</h3>
-                        <p>Erabiltzaileak domeinua idazterakoan (<a href="#">www.server-wiki.com</a>) eta enter botoia 
-                            sakatzerakoan nabigatzaileak DNS zerbitzariarekin gure domeinuaren IP helbidea zein den begiratuko du eta,
-                            topatzerakoan, nabigatzaileak IP XXX.XXX.XXX.X itzuliko du, honekin erabiltzeileak gure 
-                            webgunea ikusi ahalko du.</p>    
-                        <h3>NOLA ALDATU DNS-A</h3>
-                        <p>Erabiltzaileak Proxmoxa konfiguratzen duen lehen aldian DNS-aren izena gordeko du, aldatu nahi izatekotan, kanpoko programa bat erabiliko dugu: BIND9.</p>
+                    <h1>FTP</h1>
+                        <h3>ZER DA, FTP-A?</h3>
+                        <p>TP-ak sare TCP batera konektatuta dauden sistemen arteko artxiboen transferentzia gauzatzeko 
+                            erabiltzen den protokoloa da. Bezeroak zerbitzari batetara konektatu daiteke hortik artxiboak 
+                            deskargatzeko edota artxiboak bidaltzeko, ekipo bakoitzean erabiltzen den sistema eragilea edozein dela ere.</p>
+                        <h3>NOLA EGINGO DUGU</h3>
+                        <p>AQUI SE TIENEN QUE METER CAPTURAS MASTODONTE</p>  
+                        <h3>TOPATU DITZAKEZUN ARAZOAK</h3>
+                        <p>• &nbsp Portuak blokeatuta egotea → Firewall-a aktibatuta badago, portu horiek baimendu beharko dituzu.</p>
+                        <p>• &nbsp Root erabiltzailea ez badu logeatzea lortzen → VM-a exekutatuko dugu eta kontsolan hurrengoa idatziko dugu: <b>systemctl restart ssh</b>. Ondoren berriz saiatuko gara.</p>                                  
                     </div>
             </div>
         </div>
