--- a/FreeNas4.html
+++ b/FreeNas4.html
@@ -34,6 +34,8 @@
                     <a href="FreeNas2.html" class="active">Free Nas</a>
                     <a href="Debian.html">Debian</a>
                     <a href="DNS.html">DNS</a>
+                    <a href="SSH.html">SSH</a>
+                    <a href="FTP.html">FTP</a>
                     <a href="Debian.html">»</a>
                 </div>
             </div>
@@ -47,7 +49,7 @@
             <!-- Artikuluak -->
             <div class="articulos">
                 <div class="articulo1">
-                    <h1>Free Nas</h1>
+                    <h1>FREE NAS</h1>
                         <h3>INSTALAZIOA PROXMOXEAN</h3>
                         <p>1. &nbsp ISO-a behin deskargatu ostean, “upload” botoia sakatuko dugu eta ISO-a aurkeratuko dugu. ADI! Prozesu hau minutu batzuk hartu ditzake.</p>
                         <p>2. &nbsp Kargatzen denean, MV bat sortuko dugu ISO horrekin.</p>
