--- a/SSH.html
+++ b/SSH.html
@@ -29,30 +29,30 @@
             </header>
             <div class="center">
                 <div class="pagination">
-                    <a href="FreeNas2.html">«</a>
+                    <a href="DNS.html">«</a>
                     <a href="FreeNas2.html">Free Nas</a>
                     <a href="Debian.html">Debian</a>
-                    <a href="DNS.html" class="active">DNS</a>
-                    <a href="SSH.html">SSH</a>
+                    <a href="DNS.html">DNS</a>
+                    <a href="SSH.html" class="active">SSH</a>
                     <a href="FTP.html">FTP</a>
-                    <a href="SSH.html">»</a>
+                    <a href="FTP.html">»</a>
                 </div>
             </div>
             <!-- Artikuluak -->
             <div class="articulos">
                 <div class="articulo1">
-                    <h1>DNS</h1>
-                        <h3>ZER DA, DNS-A?</h3>
-                        <p>DNS-a Domain Name System esan nahi du, domeinuari dagokion zerbitzarian idazteaz gain, benetako helbidea, 
-                            IP izeneko zenbakizko erlazioa, domeinuaren izenean itzultzeko balioko digu, hau da: IP XXX.XXX.XXX.X 
-                            izan beharrean <a href="#">www.serverwiki.com</a> erakutsiko digu.</p>
-                        <h3>NOLA FUNTZIONATZEN DU?</h3>
-                        <p>Erabiltzaileak domeinua idazterakoan (<a href="#">www.server-wiki.com</a>) eta enter botoia 
-                            sakatzerakoan nabigatzaileak DNS zerbitzariarekin gure domeinuaren IP helbidea zein den begiratuko du eta,
-                            topatzerakoan, nabigatzaileak IP XXX.XXX.XXX.X itzuliko du, honekin erabiltzeileak gure 
-                            webgunea ikusi ahalko du.</p>    
-                        <h3>NOLA ALDATU DNS-A</h3>
-                        <p>Erabiltzaileak Proxmoxa konfiguratzen duen lehen aldian DNS-aren izena gordeko du, aldatu nahi izatekotan, kanpoko programa bat erabiliko dugu: BIND9.</p>
+                    <h1>SSH</h1>
+                        <h3>ZER DA, SSH-A?</h3>
+                        <p>SSH zerbitzariarekin konexio bat abian jartzeko erabilitako protokoloa da, erabiltzaileei beraien 
+                            zerbitzariak aldatu eta kontrolatzeko ahalmena ematen diena konexio segurua erabiliz 
+                            (informazioa enkriptatuta doa).</p>
+                        <h3>NOLA EGINGO DUGU</h3>
+                        <p>PSSH instalatu ahal izateko hurrengo pausuak jarraitu beharko ditugu:</p>
+                            <p>&nbsp&nbsp 1. Terminal grafikoa zabalduko dugu eta root bezala logeatuko gara eta terminalean hurrengoa idatziko dugu:</p>          
+                            <img src="Media/SSH/SSH2.png" width="30%">
+                            <p>&nbsp&nbsp 2. Root-a SSH erabiliz logeatzeko baimena emango diogu:</p>          
+                            <img src="Media/SSH/SSH1.png" width="30%">        
+
                     </div>
             </div>
         </div>
