--- a/FreeNas2.html
+++ b/FreeNas2.html
@@ -34,6 +34,8 @@
                     <a href="FreeNas2.html" class="active">Free Nas</a>
                     <a href="Debian.html">Debian</a>
                     <a href="DNS.html">DNS</a>
+                    <a href="SSH.html">SSH</a>
+                    <a href="FTP.html">FTP</a>
                     <a href="Debian.html">»</a>
                 </div>
             </div>
@@ -48,7 +50,7 @@
             <!-- Artikuluak -->
             <div class="articulos">
                 <div class="articulo1">
-                    <h1>Free Nas</h1>
+                    <h1>FREE NAS</h1>
                         <h3>HARDWARE BALDINTZAK</h3>
                         <p>FreeNAS doako eta open source’-ko Network Attached Storage (NAS) software bat da FreeBSD-an 
                             (x86, Intel 80386 eta Intel 80486-ko arkitekturatan oinarruta dagoen ‘open source’-ko sistema eragile bat da). 
