--- a/FreeNas3.html
+++ b/FreeNas3.html
@@ -34,6 +34,8 @@
                     <a href="FreeNas2.html" class="active">Free Nas</a>
                     <a href="Debian.html">Debian</a>
                     <a href="DNS.html">DNS</a>
+                    <a href="SSH.html">SSH</a>
+                    <a href="FTP.html">FTP</a>
                     <a href="Debian.html">»</a>
                 </div>
             </div>
@@ -47,7 +49,7 @@
             <!-- Artikuluak -->
             <div class="articulos">
                 <div class="articulo1">
-                    <h1>Free Nas</h1>
+                    <h1>FREE NAS</h1>
                         <h3>LEHEN PAUSOAK</h3>
                         <h4>Hasierako baldintzak instalazioa hasteko</h4>
                             <p>FreeNAS-eko webgunetik azken “imagen” jaitsiko dugu:</p>
