--- a/Galderak2.html
+++ b/Galderak2.html
@@ -21,7 +21,7 @@
                 <div class="fondoNavigation">
                         <div class="navbar">
                             <a href="index.html">HASIERA</a> 
-                            <a href="#">EGUNERATUAK</a> 
+                            
                             <a href="#">BISITATUENAK</a> 
                             <a href="#">BERRIAK</a>
                             <a href="FreeNas2.html">ARTIKULUAK</a>
@@ -35,26 +35,26 @@
         <div class='section'> 
                 <div class="main">
                     <!-- Galdera -->
-                    <article class="galdera">
+                    <div class="galdera">
                         <h1>Galdera:</h1>
                         <p>Zer da hosting-a?</p>     
-                    </article>
+                    </div>
                     <!-- Erantzuna -->
-                    <article class="erantzuna">
+                    <div class="erantzuna">
                         <h1>Erantzuna:</h1>
                         <p>Hosting-a, leku bat argitaratzea baimentzen dizun lineako zerbitzua da. 
                             Hosting-zerbitzuagatik ordaintzen duzunean, alokatzen duzu zerbitzari baten espazioa zure web orria ikustarazteko fitxategi guztiak gorde ditzakezun zuzenki funtziona dezan. 
                             Zerbitzari bat da etengabe zure webgunea libre egon dadin ikusi nahi duen edozein pertsonarentzako denbora guztian funtzionatzen duen konputagailu fisikoa. 
                             Zure hosting-hornitzailea da zerbitzaria funtzionamenduan mantentzeko, hura eraso maleziatsuko babesteko eta zure edukia (testua, irudiak, artxiboak|artxibatzeak) 
                             zerbitzaritik zure bisitarien nabigatzaileei transferitzeko arduraduna.
-                            </p>
-                    </article>
-                </div>
-                <div class="botoiak">
+                        </p>
+                    </div>
+                    <div class="botoiak">
                         <a href="/Galderak.html"><img src="/Media/FlechaIzquierda.png"  class="botonAnterior" name="botonAnterior" ></a>
                         <a href="/Galderak3.html"><img src="/Media/FlechaDerecha.png" class="botonSiguiente" name="botonSiguiente" ></a>
                     </div>
                 </div>
+        </div>
     </div>
     <footer>
         <div class="footerP1">
