Proxmox atal guztia

--- a/DNS.html
+++ b/DNS.html
@@ -29,10 +29,11 @@
             </header>
             <div class="center">
                 <div class="pagination">
-                    <a href="FreeNas2.html">«</a>
-                    <a href="FreeNas2.html">Free Nas</a>
+                    <a href="Debian.html">«</a>
+                    <a href="FreeNas2.html" >Free Nas</a>
+                    <a href="Proxmox.html">Proxmox</a>
                     <a href="Debian.html">Debian</a>
-                    <a href="DNS.html" class="active">DNS</a>
+                    <a href="DNS.html"class="active">DNS</a>
                     <a href="SSH.html">SSH</a>
                     <a href="FTP.html">FTP</a>
                     <a href="SSH.html">»</a>
