--- a/Debian.html
+++ b/Debian.html
@@ -29,8 +29,9 @@
             </header>
             <div class="center">
                 <div class="pagination">
-                    <a href="FreeNas2.html">«</a>
-                    <a href="FreeNas2.html">Free Nas</a>
+                    <a href="Proxmox.html">«</a>
+                    <a href="FreeNas2.html" >Free Nas</a>
+                    <a href="Proxmox.html">Proxmox</a>
                     <a href="Debian.html" class="active">Debian</a>
                     <a href="DNS.html">DNS</a>
                     <a href="SSH.html">SSH</a>
