--- a/SSH.html
+++ b/SSH.html
@@ -30,10 +30,11 @@
             <div class="center">
                 <div class="pagination">
                     <a href="DNS.html">«</a>
-                    <a href="FreeNas2.html">Free Nas</a>
+                    <a href="FreeNas2.html" >Free Nas</a>
+                    <a href="Proxmox.html">Proxmox</a>
                     <a href="Debian.html">Debian</a>
                     <a href="DNS.html">DNS</a>
-                    <a href="SSH.html" class="active">SSH</a>
+                    <a href="SSH.html"class="active">SSH</a>
                     <a href="FTP.html">FTP</a>
                     <a href="FTP.html">»</a>
                 </div>
