--- a/FTP.html
+++ b/FTP.html
@@ -29,12 +29,13 @@
             </header>
             <div class="center">
                 <div class="pagination">
-                    <a href="DNS.html">«</a>
-                    <a href="FreeNas2.html">Free Nas</a>
+                    <a href="SSH.html">«</a>
+                    <a href="FreeNas2.html" >Free Nas</a>
+                    <a href="Proxmox.html">Proxmox</a>
                     <a href="Debian.html">Debian</a>
                     <a href="DNS.html">DNS</a>
                     <a href="SSH.html">SSH</a>
-                    <a href="FTP.html" class="active">FTP</a>
+                    <a href="FTP.html"class="active">FTP</a>
                     <a href="FreeNas2.html">»</a>
                 </div>
             </div>
