--- a/FreeNas2.html
+++ b/FreeNas2.html
@@ -30,13 +30,14 @@
         <div>
             <div class="center">
                 <div class="pagination">
-                    <a href="#">«</a>
+                    <a href="FTP.html">«</a>
                     <a href="FreeNas2.html" class="active">Free Nas</a>
+                    <a href="Proxmox.html">Proxmox</a>
                     <a href="Debian.html">Debian</a>
                     <a href="DNS.html">DNS</a>
                     <a href="SSH.html">SSH</a>
                     <a href="FTP.html">FTP</a>
-                    <a href="Debian.html">»</a>
+                    <a href="Proxmox.html">»</a>
                 </div>
             </div>
             <div class="center2">
